--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
       href="https://fonts.googleapis.com/css2?family=Croissant+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="path/to/notifications.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="path/to/react-notifications/dist/react-notifications.css"
+    />
+    <script src="path/to/react-notifications/dist/react-notifications.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
